--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.10",
     "react-native-maps": "1.18.0",
-    "expo-location": "~18.0.2"
+    "expo-location": "~18.0.2",
+    "expo-sensors": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
