--- a/package.json
+++ b/package.json
@@ -24,22 +24,23 @@
     "expo-image": "~2.0.1",
     "expo-image-picker": "~16.0.2",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.2",
     "expo-router": "~4.0.7",
+    "expo-sensors": "~14.0.1",
     "expo-splash-screen": "~0.29.12",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "haversine": "^1.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.10",
-    "react-native-maps": "1.18.0",
-    "expo-location": "~18.0.2",
-    "expo-sensors": "~14.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
