--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/native": "^6.0.2",
     "@rnmapbox/maps": "^10.1.33",
     "expo": "^52.0.0",
+    "expo-av": "~15.0.1",
     "expo-constants": "~17.0.3",
+    "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
     "expo-image": "~2.0.1",
     "expo-image-picker": "~16.0.2",
